--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>台灣觀光60年事紀互動魚骨圖</title>
+  <title>來台觀光客人數統計圖</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 <div style="margin: 0 auto;width: 1024px;">
   <center>
     <br>
-    <font style="font-size: 48px;">來台觀光客人數統計圖</font>
+    <font style="font-size: 48px;">來台觀光客人數統計圖(100-111年)</font>
   </center>
   <p align="right">資料來源：中華民國觀光署</p>
 </div>  
